--- a/HTML/index.html
+++ b/HTML/index.html
@@ -26,6 +26,7 @@
                 <div class="hello">Hi, I am Dibya Jyoti Bharali</div>
                 <div class="about">Developer</div>
                 <div class="name">Web Developer, Coder</div>
+                <h1> Zubeen Garg</h1>
                 <div class="moreabout">I am a developer, i love to drink cofiee, i love to visit New Delhi to buy cofiee</div>
                 <div class="buttons">
                     <a href="/cv.text" target="_blank">
